--- a/src/styles/_microphone.scss
+++ b/src/styles/_microphone.scss
@@ -1,35 +1,49 @@
-.microphone__container {
-    width: 70%;
-    height: 50%;
+.microphone {
+    width: 100%;
+    height: 90%;
     margin: auto;
-    margin-top: 10%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    // justify-content: space-between;
     text-align: center;
+    font-size: 1vw;
 }
 
 
 .output__container {
     width: 100%;
-    height: 50%;
-    font-size: 3rem;
+    height: 30%;
+    font-size: 3em;
     white-space: pre-wrap;
+}
+.auth_container{
+    width: 100%;
+    height: 60%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .key__container,
 .password__container {
-    width: 70%;
-    font-size: 2rem;
+    width: 40%;
     display: flex;
+    font-size: 2em;
     text-align: left;
 }
 
-.password,
 .password--header,
-.key,
 .key--header {
-    width: 50%;
-    font-size: 2rem;
+    width: 60%;
 }
 
+.password--value,
+.key--value {
+    width: 40%;
+}
+
+.monitor--value{
+    font-size: 2em;
+    width: 60%;
+}
