--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,8 +1,9 @@
-.microphone__container {
-  width: 70%;
-  height: 50%;
+@import url("https://fonts.googleapis.com/css?family=Anton&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Roboto:100,300,400&display=swap");
+.microphone {
+  width: 100%;
+  height: 90%;
   margin: auto;
-  margin-top: 10%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -14,39 +15,164 @@
       -ms-flex-align: center;
           align-items: center;
   text-align: center;
+  font-size: 1vw;
 }
 
 .output__container {
   width: 100%;
-  height: 50%;
-  font-size: 3rem;
+  height: 30%;
+  font-size: 3em;
   white-space: pre-wrap;
+}
+
+.auth_container {
+  width: 100%;
+  height: 60%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .key__container,
 .password__container {
-  width: 70%;
-  font-size: 2rem;
+  width: 40%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  font-size: 2em;
   text-align: left;
 }
 
-.password,
 .password--header,
-.key,
 .key--header {
-  width: 50%;
-  font-size: 2rem;
+  width: 60%;
 }
 
-.camera__container {
+.password--value,
+.key--value {
+  width: 40%;
+}
+
+.monitor--value {
+  font-size: 2em;
+  width: 60%;
+}
+
+.camera {
   position: absolute;
   top: 0;
 }
 
-video {
-  opacity: 1;
+.video--element {
+  opacity: 0;
+  z-index: -1;
+}
+
+.statusBar {
+  margin-top: 2%;
+  width: 100%;
+  height: 7%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
+}
+
+.statusBar__icon {
+  margin: 0% 1% 0% 1%;
+  height: 100%;
+  width: 5%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  opacity: 0;
+}
+
+.statusBar__icon--camera {
+  background-image: url(/resources/camera.svg);
+}
+
+.statusBar__icon--microphone {
+  background-image: url(/resources/microphone.svg);
+}
+
+.time {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  font-size: 1vw;
+  width: 20%;
+}
+
+.time--value {
+  text-align: center;
+  font-size: 8em;
+  width: 100%;
+}
+
+.date--value {
+  text-align: center;
+  font-size: 1.6em;
+  width: 100%;
+}
+
+.events {
+  color: white;
+  position: absolute;
+  font-size: 2.5em;
+  text-align: left;
+  width: 30%;
+  padding-top: 3%;
+}
+
+.events li {
+  list-style: none;
+}
+
+.events .events__container {
+  margin: 5% 0%;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  width: 100vw;
+  height: 100vh;
+  color: white;
+  text-align: center;
+  font-family: 'Anton', sans-serif;
+  /* font-family: 'Roboto', sans-serif; */
+  letter-spacing: 0.1em;
+  background-color: black;
+  overflow: hidden;
+}
+
+.app {
+  width: 100vw;
+  height: 100vh;
+}
+
+.data {
+  position: absolute;
+  top: 0;
+  left: 3%;
+  width: 100%;
 }
 /*# sourceMappingURL=styles.css.map */
