--- a/src/styles/_statusBar.scss
+++ b/src/styles/_statusBar.scss
@@ -23,3 +23,8 @@
 .statusBar__icon--microphone {
     background-image: url(/resources/microphone.svg);
 }
+
+.statusBar__icon--counter{
+    font-size: 5vh;
+    opacity: 1;
+}
