--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -106,6 +106,11 @@
   background-image: url(/resources/microphone.svg);
 }
 
+.statusBar__icon--counter {
+  font-size: 5vh;
+  opacity: 1;
+}
+
 .time {
   display: -webkit-box;
   display: -ms-flexbox;
