--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,12 +1,11 @@
-@import url('https://fonts.googleapis.com/css?family=Anton&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400&display=swap');
-
 @import 'microphone';
 @import 'camera';
 @import 'tasks';
 @import 'statusBar';
 @import 'time';
 @import 'events';
+@import 'weather';
 
 body {
     margin: 0;
@@ -15,11 +14,10 @@ body {
     height: 100vh;
     color: white;
     text-align: center;
-    font-family: 'Anton', sans-serif;
-    /* font-family: 'Roboto', sans-serif; */
-    letter-spacing: 0.1em;
     background-color: black;
     overflow: hidden;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 100;
 }
 
 .app {
