--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -122,7 +122,7 @@
       -ms-flex-align: start;
           align-items: flex-start;
   font-size: 1vw;
-  width: 20%;
+  width: 100%;
 }
 
 .time--value {
@@ -139,10 +139,8 @@
 
 .events {
   color: white;
-  position: absolute;
-  font-size: 2.5em;
+  font-size: 2.2em;
   text-align: left;
-  width: 30%;
   padding-top: 3%;
 }
 
@@ -155,10 +153,7 @@
 }
 
 .weather__container {
-  position: absolute;
-  width: 15%;
-  top: 15vh;
-  right: 5vw;
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -204,6 +199,86 @@
   font-size: 2em;
 }
 
+.news--index {
+  font-size: 2em;
+}
+
+.news--author {
+  display: none;
+  font-size: 2em;
+  padding-bottom: 1%;
+}
+
+.news--title {
+  padding: 2%;
+  text-align: start;
+  font-size: 2em;
+}
+
+.news--description {
+  padding: 2%;
+  text-align: start;
+  font-size: 1.5em;
+}
+
+.data {
+  position: absolute;
+  top: 2%;
+  left: 2%;
+  width: 96%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.data--left {
+  position: absolute;
+  width: 30%;
+}
+
+.data--middle {
+  position: absolute;
+  left: 30%;
+  width: 50%;
+}
+
+.data--right {
+  position: absolute;
+  right: 0;
+  width: 20%;
+}
+
+.steps {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  padding-top: 10%;
+}
+
+.steps--icon {
+  font-size: 2em;
+}
+
+.steps--icon img {
+  height: 1.8em;
+}
+
+.steps--info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: start;
+  font-size: 1.5em;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -222,10 +297,12 @@ body {
   height: 100vh;
 }
 
-.data {
+button {
   position: absolute;
-  top: 0;
-  left: 3%;
-  width: 100%;
+  top: 50vh;
+  background-color: red;
+  border: red;
+  width: 100px;
+  height: 100px;
 }
 /*# sourceMappingURL=styles.css.map */
