--- a/src/styles/_news.scss
+++ b/src/styles/_news.scss
@@ -1,5 +1,4 @@
-.news__container {
-}
+.news__container {}
 
 .news--index {
     font-size: 2em;
@@ -21,4 +20,10 @@
     padding: 2%;
     text-align: start;
     font-size: 1.5em;
+}
+
+iframe {
+    width: 100%;
+    height: 85vh;
+    background-color: white;
 }
